type_conversion_coercision

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     hello World
 </body>
 <!-- <script src="js/index.js"></script> -->
-<script src="js/data_types.js"></script>
+<!-- <script src="js/data_types.js"></script> -->
+<script src="js/type_conversion_coercion.js"></script>
 
 </html>
