--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </body>
 <!-- <script src="js/index.js"></script> -->
 <!-- <script src="js/data_types.js"></script> -->
-<script src="js/type_conversion_coercion.js"></script>
-
+<!-- <script src="js/type_conversion_coercion.js"></script> -->
+<!-- <script src="/js/string.js"></script> -->
+<script src="/js/arrays.js"></script>
 </html>
